--- a/css/style.css
+++ b/css/style.css
@@ -62,18 +62,23 @@ img {
 .header {
   padding-top: 44px;
 }
+.header> .container {
+  display: flex;
+  align-items: center;
+}
 .logo {
   color: var(--accent-color);
-  text-align: center;
   font-family: Bilbo Swash Caps;
   font-size: 36px;
   line-height: 1.13;
   letter-spacing: 1.3px;
 }
+.nav {
+  margin-left: auto;
+}
 .nav-list {
   display: flex;
-  gap: 30px;
-  justify-content: center;
+  gap: 10px;
 }
 .nav-link {
   color: var(--accent-color);
@@ -82,6 +87,7 @@ img {
   line-height: 41px;
   text-transform: uppercase;
   text-decoration: none;
+  padding: 10px;
 }
 .nav-link:hover, .nav-link:focus {
   font-weight: 700;
@@ -130,6 +136,17 @@ img {
   text-align: center;
   margin-bottom: 114px;
 }
+.contact-us-form {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 28px;
+}
+.contact-us-form-box { 
+  display: flex;
+  flex-direction: column;
+  gap: 28px;
+}
 .contact-us-input {
   font-size: 14px;
   font-weight: 700;
@@ -137,6 +154,8 @@ img {
   text-transform: uppercase;
   display: flex;
   gap: 28px;
+  padding: 12px 20px 21px;
+  width: 455px;
 }
 .contact-us-input::placeholder {
   color: #BBB;
@@ -147,6 +166,11 @@ img {
   font-weight: 700;
   letter-spacing: -0.35px;
   text-transform: uppercase;
+  padding-top: 14px;
+  padding-left: 22px;
+  resize: none;
+  width: 458px;
+  height: 212px;
 }
 .contact-us-comment::placeholder {
   color: #BBB;
