--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,27 @@ img {
   display: flex;
   gap: 56px;
 }
+.services-item::before {
+  content: '';
+  display: block;
+  width: 70px;
+  height: 69px;
+  border: 3px solid var(--accent-color);
+  border-radius: 50%;
+  margin: 0 auto;
+  background-image: url('../images/services_svg\ 1.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 38px 38px;
+}
+.services-item:nth-child(2)::before {
+  background-image: url('../images/services_svg\ 2.svg');
+  background-size: 40px 33px;
+}
+.services-item:nth-child(3)::before {
+  background-image: url('../images/services_svg\ 3.svg');
+  background-size: 27px 37px;
+}
 .services-item-title {
   color: var(--main-color);
   text-align: center;
