--- a/css/style.css
+++ b/css/style.css
@@ -88,9 +88,19 @@ img {
   text-transform: uppercase;
   text-decoration: none;
   padding: 10px;
+  position: relative;
 }
 .nav-link:hover, .nav-link:focus {
   font-weight: 700;
+}
+.current::after {
+  content: '';
+  display: block;
+  height: 4px;
+  width: 100%;
+  position: absolute;
+  background-color: var(--accent-color);
+  border-radius: 4px;
 }
 .services {
   padding-top: 110px;
