--- a/css/style.css
+++ b/css/style.css
@@ -187,6 +187,8 @@ img {
   gap: 28px;
   padding: 12px 20px 21px;
   width: 455px;
+  outline: none;
+  transition: border-color 550ms ease-in;
 }
 .contact-us-input::placeholder {
   color: #BBB;
@@ -202,6 +204,8 @@ img {
   resize: none;
   width: 458px;
   height: 212px;
+  outline: none;
+  transition: border-color 550ms ease-in;
 }
 .contact-us-comment::placeholder {
   color: #BBB;
