--- a/sass/layout/_contact-us.scss
+++ b/sass/layout/_contact-us.scss
@@ -1,40 +1,36 @@
 .contact-us {
-  background-color: var(--main-color);
+  background-color: $main-color;
   padding-top: 92px;
   padding-bottom: 115px;
 }
 .contact-us-form {
-  display: flex;
-  align-items: center;
+  @include flex(28px);
   flex-wrap: wrap;
-  gap: 28px;
 }
 .contact-us-form-box {
-  display: flex;
+  @include flex(28px);
   flex-direction: column;
-  gap: 28px;
 }
 .contact-us-input {
-  font-size: 14px;
+  @include text(normal, -0.35px);
   font-weight: 700;
-  letter-spacing: -0.35px;
-  text-transform: uppercase;
-  display: flex;
-  gap: 28px;
   padding: 12px 20px 21px;
   width: 455px;
   outline: none;
   transition: border-color 550ms ease-in;
-}
-.contact-us-input::placeholder {
-  color: #bbb;
-  text-transform: uppercase;
+  &::placeholder {
+    color: #bbb;
+    text-transform: uppercase;
+  }
+  &:hover,
+  &:focus {
+    border: 2px solid transparent;
+    cursor: pointer;
+  }
 }
 .contact-us-comment {
-  font-size: 14px;
+  @include text(normal, -0.35px);
   font-weight: 700;
-  letter-spacing: -0.35px;
-  text-transform: uppercase;
   padding-top: 14px;
   padding-left: 22px;
   resize: none;
@@ -42,27 +38,25 @@
   height: 212px;
   outline: none;
   transition: border-color 550ms ease-in;
-}
-.contact-us-comment::placeholder {
-  color: #bbb;
-  text-transform: uppercase;
+  &::placeholder {
+    color: #bbb;
+    text-transform: uppercase;
+  }
+  &:hover,
+  &:focus {
+    border: 2px solid transparent;
+    cursor: pointer;
+  }
 }
 .contact-us-input,
 .contact-us-textarea {
   /* задати початкові дані для рамки та зробити її прозорою, щоб при ефекті не стрибало */
   border: 2px solid transparent;
 }
-.contact-us-input:hover,
-.contact-us-input:focus,
-.contact-us-comment:hover,
-.contact-us-comment:focus {
-  border: 2px solid transparent;
-  cursor: pointer;
-}
 .contact-us-submit {
   width: 242px;
   height: 68px;
-  background-color: var(--accent-color);
+  background-color: $accent-color;
   font-family: Montserrat;
   border: none;
   color: #fff;
@@ -74,9 +68,9 @@
   display: block;
   margin: 0 auto;
   margin-top: 29px;
-}
-.contact-us-submit:hover,
-.contact-us-submit:focus {
-  cursor: pointer;
-  opacity: 0.7;
+  &:hover,
+  &:focus {
+    cursor: pointer;
+    opacity: 0.7;
+  }
 }
