--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -1,5 +1,3 @@
-:root {
-  --accent-color: #fed136;
-  --main-color: #222222;
-  --add-color: #777777;
-}
+$accent-color: #fed136;
+$main-color: #222222;
+$add-color: #777777;
